# oaisys

./: .gitignore  GRPCWrapper.py  LICENSE  README.md  oaisys_pb2.py  oaisys_test_client.py  run_oaisys.py  run_oaisys_online.py  terrain_stage_simulator_2_cmdline.py
cfgExamples/: OAISYS_Aeroconf2025_asteroid_generation.json  OAISYS_default_cfg.json
doc/wiki/basicExample/: asteroidExample.md  basicExample.md
doc/wiki/reuseLandscape/: reuseLandscape.md
grpc_data/proto/: oaisys_pb2_grpc.py
oaisys_client_ros/: CMakeLists.txt  package.xml
oaisys_client_ros/include/oaisys_client_ros/: oaisys_client.h
oaisys_client_ros/launch/: test_oaisys_client.launch
oaisys_client_ros/proto/: oaisys.proto
oaisys_client_ros/src/: oaisys_client.cpp  oaisys_client_node.cpp
oaisys_data/banner/: welcome_banner.txt  welcome_banner_oaisys.txt  welcome_banner_oaisys_small.txt
oaisys_data/blender_files/rocks/: asteroid.blend  rocks.blend  rocks_01.blend  rocks_02.blend1
oaisys_data/blender_files/stages/: noise_deform_plane.blend  simple_plane.blend  simple_plane_100x100.blend  (+3 more)
post_processing/: README.md  annotation_writer.py  apply_post_processing.py  coco_category_definitions.yaml  coco_config.py  coco_writer.py  default_config.py  hdf5_config.py  hdf5_writer.py  io_utils.py
scripts/: README.md  coco_visualizer.py
src/: README.md  TSSBase.py  TSS_simulation.py  TSS_simulation_online.py
src/assets/: README.md  TSSAsset.py  TSSMaterial.py  TSSMesh.py  TSSModifieres.py  TSSStage.py
src/environment_effects/: README.md  TSSEnvironmentEffects.py
src/handle/: README.md  TSSAssetHandle.py  TSSEnvironmentEffectHandle.py  TSSMaterialHandle.py  TSSRenderHandle.py  TSSRenderPostProcessingHandle.py  TSSSensorHandle.py
src/render_post_processing/: README.md  TSSRenderPostProcessing.py
src/rendering/: README.md  TSSRenderPass.py
src/sensors/: README.md  TSSSensor.py
src/tools/: NodeTools.py  cfgParser.py  cfg_parser.py  color_print.py  depth_dummy.py  distance2Depth.py  mesh_loader.py  timing_module.py
src/utilities/: OAISYSLogger.py
tools/asteroid_creation/: asteroid_database.py  asteroid_database_doc.md  generate_crater_map.py  run_asteroid_test_dataset_job.sh
(+59 files in other folders)
