<?xml version="1.0"?>
<package>
  <name>oaisys_client_ros</name>
  <version>0.0.0</version>
  <description>OAISYS gRPC client for ROS</description>

  <maintainer email="jalim@ethz.ch">Jaeyoung Lim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>grpc</build_depend>
  <run_depend>eigen_catkin</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>grpc</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
